force-app/main/default/objects/Student_Course_Enrollment__c/Student_Course_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Junction object linking students to course enrollments</description>
    <label>Student Course Enrollment</label>
    <nameField>
        <displayFormat>SCE-{00000}</displayFormat>
        <label>Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Course Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>