force-app/main/default/objects/Student_Course_Enrollment__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <label>Academic Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2024-2025</fullName>
            </value>
            <value>
                <fullName>2025-2026</fullName>
            </value>
            <value>
                <fullName>2026-2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>