force-app/main/default/objects/Student_Course_Enrollment__c/fields/Attendance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Percentage__c</fullName>
    <label>Attendance Percentage</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>