force-app/main/default/objects/Student_Course_Enrollment__c/fields/Class_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Class_Schedule__c</fullName>
    <label>Class Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>