force-app/main/default/objects/Student_Course_Enrollment__c/fields/Professor_Name__c.field-meta.xml
<CustomField>
    <fullName>Professor_Name__c</fullName>
    <label>Professor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>