force-app/main/default/objects/Student_Course_Enrollment__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <length>10</length>
    <type>Text</type>
</CustomField>